# spl3

./: AdminInputOutput  client1.exp  client1.sh  client1InputOutput  client2concurrentTest  client3concurrentTest  script.exp  server.sh
Client/: CMakeLists.txt  makefile
Client/include/: Task.h  connectionHandler.h
Client/src/: Client.cpp  Task.cpp  connectionHandler.cpp
Server/: pom.xml
Server/Database/: Movies.json  Users.json
Server/src/bgu/spl181/net/: Movie.java
Server/src/bgu/spl181/net/api/bidi/: BidiMessagingProtocol.java  Connections.java  ConnectionsTPC.java  MessageEncoderDecoder.java  MessageProtocol.java
Server/src/bgu/spl181/net/impl/: ConnectionsTPC.java  EncoderDecoder.java  MessageProtocol.java  Movie.java  MovieRentalProtocol.java  User.java  UserServiceTextBaseProtocol.java
Server/src/bgu/spl181/net/impl/BBtpc/: SharedProtocolData.java  TPCMain.java
Server/src/bgu/spl181/net/srv/: Server.java  TcpServer.java  TpcServer.java  User.java
Server/src/bgu/spl181/net/srv/bidi/: BlockingConnectionHandler.java  ConnectionHandler.java
Server/src/main/java/bgu/spl181/net/impl/: BaseMovie.java  ConnectionsImpl.java  ConnectionsTPC.java  EncoderDecoder.java  Movie.java  MovieRentalProtocol.java  SharedProtocolMovieData.java  User.java  (+3 more)
Tests/: Admin1.exp  client.sh  client1.exp  client2.exp  client3.exp  server.sh  test.sh
src/bgu/spl181/net/: Movie.java
src/bgu/spl181/net/api/bidi/: MessageProtocol.java
src/bgu/spl181/net/srv/: Server.java  TcpServer.java  User.java
src/bgu/spl181/net/srv/bidi/: BlockingConnectionHandler.java
(+32 files in other folders)
