cmake_minimum_required(VERSION 3.8)
project(Client)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES
        include/connectionHandler.h
        src/connectionHandler.cpp
        src/Client.cpp
        )
add_executable(Client ${SOURCE_FILES})
find_package(Boost)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    target_link_libraries(Client Boost::system Boost::thread)
        endif()